	was used for the height.

    o	The Graphapp computation for keyboard accelerators for menus was
	not always working correctly, at least on Windows XP -- this
	affected e.g. Alt-M plus 'i' for 'List search path', where the
	second 's' was being underlined.  (PR#11036)
	
    o	The winDialogString() dialog now releases CPU cycles while
    	waiting for input. (PR#11045)



	**************************************************
	*						 *
	*	       2.6 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.6.2 patched

INSTALLER

    o	The installer now uses version-specific identifiers so that
	multiple versions of R can be installed and uninstalled
	separately. (PR#10746)



		CHANGES IN R VERSION 2.6.2

WORKAROUNDS

    o	We set some environment variables to work around hangs in Rgui
	when packages (e.g. the then current version of tseries) use
	Fortran WRITE calls.  The Fortran output will be written to a
	file named 'fort.6' in the working directory.

    o	Browsing for a directory in choose.dir() and the Rgui
	'Change Dir...' menu item now works around Vista's confusion
	about 'desktop' by starting at 'Computer' on Vista/Server 2008.

    o	The shortcuts created by the installer now start R in the user's
	personal folder (typically 'My Documents' or 'Documents').


NEW FEATUES

    o	win.version() and Sys.info() know about recent and upcoming
	Windows versions, including if they are running on a 64-bit
	platform.

    o	The listbox used by select.list() now responds to
	double-clicking an item (as if the item had been selected and
	then the OK button pressed).

    o	The header iconv.h is now installed, and can be used by
	packages in conjunction with PKG_LIBS=-liconv .

    o	The value of "default" for the postscript() 'paper' argument for
	savePlot() and the windows() graphics device menus is now
	interpreted as "special" (rather than "a4" or "letter"): it